css/gauchoai.webflow.css
/* ... */
.w-layout-hflex {
  flex-direction: row;
  align-items: flex-start;
  display: flex;
}

.w-layout-vflex {
  flex-direction: column;
  align-items: flex-start;
  display: flex;
}

.w-layout-layout {
  grid-row-gap: 20px;
  grid-column-gap: 20px;
  grid-auto-columns: 1fr;
  justify-content: center;
  padding: 20px;
}

.w-layout-cell {
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  display: flex;
}

.w-layout-blockcontainer {
  max-width: 940px;
  margin-left: auto;
  margin-right: auto;
  display: block;
}

@media screen and (max-width: 991px) {
  .w-layout-blockcontainer {
    max-width: 728px;
  }
}

@media screen and (max-width: 767px) {
  .w-layout-blockcontainer {
    max-width: none;
  }
}

h1 {
  color: #fff;
  margin-top: 20px;
  margin-bottom: 10px;
  font-size: 10vh;
  font-weight: 700;
  line-height: 10vh;
}

h2 {
  color: #fff;
  margin-top: 20px;
  margin-bottom: 20px;
  font-size: 38px;
  font-weight: 700;
  line-height: 48px;
}

h3 {
  color: #6b6b6b;
  margin-top: 10px;
  margin-bottom: 25px;
  font-size: 24px;
  font-weight: 400;
  line-height: 40px;
}

h4 {
  color: #fff;
  margin-top: 10px;
  margin-bottom: 10px;
  font-size: 18px;
  font-weight: 700;
  line-height: 24px;
}

p {
  color: #6b6b6b;
  margin-bottom: 10px;
  font-size: 16px;
  line-height: 30px;
}

a {
  color: #000;
  text-decoration: underline;
}

.section {
  background-color: #fff;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: auto;
  margin-bottom: 3vh;
  display: flex;
}

.section.center {
  background-color: #fff;
  flex-flow: column;
  justify-content: flex-start;
  align-items: flex-start;
  height: 100vh;
  padding-top: 0;
  padding-bottom: 5vh;
  display: flex;
  position: relative;
}

.section.wide {
  background-color: var(--navy);
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: auto;
  padding-top: 2vh;
  padding-bottom: 2vh;
  display: flex;
}

.hero {
  z-index: 999999;
  background-color: #003660;
  border: 1px #000;
  border-bottom: 8px solid #047c91;
  width: 100%;
  height: auto;
  padding: 0 10vw;
  display: flex;
  position: absolute;
  top: 0;
  left: 0;
}

.nav {
  background-color: #0000;
  justify-content: space-between;
  align-items: center;
  height: auto;
  display: flex;
}

.nav-inner {
  border-bottom: 1px #ffffff1a;
  justify-content: space-between;
  align-items: center;
  width: 80vw;
  padding-top: 0;
  padding-bottom: 0;
  display: flex;
}

.body {
  background-color: #0000;
  font-family: Gothic A1, sans-serif;
}

.whatwedo {
  color: #111517;
  margin-top: 10vh;
  margin-bottom: 0;
  padding-top: 0;
  font-family: Gothic A1, sans-serif;
  font-size: 10vh;
  font-weight: 400;
  line-height: 9vh;
}

.feature-content {
  border: 1px #000;
  flex: none;
  width: 50vw;
  max-width: 450px;
  padding-left: 2vw;
  padding-right: 2vw;
}

.feature-content.icons {
  text-align: center;
  flex-direction: column;
  flex: none;
  align-items: center;
  width: 33.33%;
  max-width: none;
  padding-left: 30px;
  padding-right: 30px;
  display: flex;
}

.button {
  color: #fff;
  text-align: center;
  background-color: #6d7d33;
  border-radius: 3px;
  width: 50%;
  margin-right: 0;
  padding: 20px 40px;
  font-size: 16px;
  font-weight: 600;
  line-height: 26px;
  transition: background-color .5s cubic-bezier(.789, .159, .25, 1), color .2s cubic-bezier(.789, .159, .25, 1);
  display: inline-block;
}

.button:hover {
  color: #111517;
  background-color: #eef0f2;
}

.button.contact {
  color: #fff;
  background-color: #ef5645;
  margin-left: 10px;
  box-shadow: inset 0 0 0 2px #fff3;
}

.button.contact:hover {
  color: #fff;
  background-color: #111517;
  border: 0 #111517;
  border-radius: 0;
  box-shadow: inset 0 0 0 2px #fff;
}

.button.contact-services {
  color: #fff;
  background-color: #ef5645;
  margin-left: 10px;
  box-shadow: inset 0 0 0 2px #fff3;
}

.button.contact-services:hover {
  color: #fff;
  background-color: #111517;
  border: 0 #111517;
  border-radius: 0;
  box-shadow: inset 0 0 0 2px #fff;
}

.wrap {
  text-align: center;
  flex: 0 auto;
  max-width: 70%;
  margin-bottom: 5vh;
  padding-top: 0;
  padding-bottom: 0;
}

.whatwedoimg {
  flex: none;
  max-width: 100%;
}

.button-wrap {
  justify-content: center;
  width: auto;
  margin-top: 1vh;
  padding-left: 0;
  padding-right: 0;
  display: flex;
}

.nav-menu-wrap {
  font-weight: 500;
}

.nav-link {
  color: #febc11;
  mix-blend-mode: normal;
  flex: 0 auto;
  margin-bottom: 20px;
  margin-left: 15px;
  margin-right: 15px;
  padding-top: 40px;
  padding-left: 0;
  padding-right: 0;
  font-family: Montserrat, sans-serif;
  font-size: 20px;
  font-weight: 700;
  display: inline-flex;
}

.nav-link:hover {
  color: #fff;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: inset 0 -5px #febc11;
}

.nav-link.w--current {
  color: gold;
}

.nav-link.w--current:hover {
  color: #fff;
  box-shadow: inset 0 -5px #febc11;
}

.whatwedosub {
  color: #111517;
}

.home-hero-content {
  z-index: 90;
  background-color: var(--white);
  flex-flow: row;
  flex: 0 auto;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 85%;
  margin-left: auto;
  margin-right: auto;
  padding-top: 20vh;
  padding-left: 7vw;
  padding-right: 7vw;
  display: flex;
  position: relative;
}

.feature-wrap {
  border: 1px #000;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
  width: 90vw;
  margin-top: 5vh;
  margin-bottom: 5vh;
  padding-left: 10vw;
  padding-right: 10vw;
  display: flex;
}

.feature-wrap.reverse {
  flex-direction: row-reverse;
  margin-top: 5vh;
  margin-bottom: 5vh;
}

.feature-wrap.icons {
  justify-content: space-between;
  margin-top: 7vh;
  margin-bottom: 7vh;
  padding-left: 0;
  padding-right: 0;
}

.feature-image {
  border: 1px #000;
  justify-content: center;
  align-items: center;
  width: 40vw;
  display: flex;
}
/* ... */

